--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿altair==5.0.1
+altair==5.0.1
 attrs==23.1.0
 backports.zoneinfo==0.2.1
 blinker==1.6.2
@@ -76,9 +76,9 @@ thinc==8.1.10
 threadpoolctl==3.2.0
 toml==0.10.2
 toolz==0.12.0
-torch==1.9.0
-torchaudio==0.9.0
-torchvision==0.10.0
+torch==2.0.1
+torchaudio==2.0.2
+torchvision==0.15.2
 tornado==6.3.2
 tqdm==4.65.0
 typer==0.9.0
